@@ -1,4 +1,5 @@
 # next
+- Play icon for current song in queue shows playing status and toggles play/pause
 - Fixes "undefined" output in the queue album information
 - Performance improvements(tm)
 
